# cardano-pool-checker

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
cardano_pool_checker/: __main__.py  cardano_pool_checker.py  cardano_pool_checker.pyi  cardano_pool_checker_class.py  cardano_pool_checker_config.py  cardano_pool_checker_config.pyi
cardano_pool_checker/pools/: pools_dns_translations.json  pools_list.json  registered_currently_sharing_meta_json_homepage.json  registered_currently_sharing_meta_url.json  registered_currently_sharing_owners.json  registered_currently_sharing_relay_hostname.json  registered_currently_sharing_relay_ipv4.json  registered_currently_sharing_reward_addr.json  registered_multi_stake_pool_operators.json  registered_sharing_meta_json_homepage.json  registered_sharing_meta_url.json  registered_sharing_owners.json  registered_sharing_relay_hostname.json  registered_sharing_relay_ipv4.json  registered_sharing_reward_addr.json  registered_single_stake_pool_operators.json
tests/: pools_classified_result.json  pools_list_expected.json  pools_register_expected.json  pools_updates_expected.json  registered_currently_sharing_meta_json_homepage_result.json  registered_currently_sharing_meta_url_result.json  registered_currently_sharing_relay_hostname_result.json  registered_currently_sharing_relay_ipv4_result.json  registered_currently_sharing_relay_ipv6_result.json  registered_currently_sharing_reward_addr_expected.json  registered_sharing_meta_json_homepage_expected.json  registered_sharing_meta_url_expected.json  registered_sharing_owners_expected.json  registered_sharing_relay_hostname_result.json  registered_sharing_relay_ipv4_expected.json  registered_sharing_relay_ipv6_expected.json  test_build_classified.py  test_build_register.py  test_find_registered_currently_sharing.py  test_find_registered_sharing.py
