[tool.poetry]
name = "cardano-pool-checker"
version = "0.1.0"
description = "JSON-based collection of historical Cardano stake pool registration data, lists of multi pool operators by different criteria and associated maintenance tools."
authors = ["Josep M Homs <jmhoms@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "cardano_pool_checker"}]

[tool.poetry.dependencies]
python = "^3.10"
urllib3 = "^2.0.3"
ipaddress = "^1.0.23"
dnspython = "^2.3.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
flake8 = "^6.0.0"
black = "^23.7.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
